# Examinie-AI

./: .env.example.com  README.md  compose.yaml  pyproject.toml
app/: main.py
app/config/: config.py
app/handlers/: auth.py  exam.py  result.py  student.py  student_progress.py  upload.py  user.py
app/models/: base.py  content.py  enum.py  exam.py  onboarding.py  student.py  teacher.py  user.py
app/routes/: auth.py  exam.py  onboarding.py  result.py  student.py  student_progress.py  upload.py  user.py
app/schemas/: content.py  exam.py  onboarding.py  result.py  student.py  teacher.py  user.py
app/utils/: auth.py  db.py  file_format_validation.py  generate_cpqs.py  generate_csqs.py  generate_fitbqs.py  generate_mcqs.py  generate_profile_summary.py  generate_tfqs.py  llm.py  student_progress.py  text_extraction.py  validating_functions.py
app/utils/exam_generation/: generate_cpqs.py  generate_fitbqs.py  generate_lqs.py  generate_sqs.py  generate_tfqs.py
app/utils/exam_grading/: client.py  grade_cpqs.py  grade_csqs.py  grade_fitb.py  grade_lqs.py  grade_questions.py  grade_sqs.py
